# voice-based-wheelchair

./: .gitignore  README.md  codex.md  dolchair.rviz  frames_2025-10-27_21.53.55.gv  llm_node.py
Arduino/WHEEL_CHAIR/: WHEEL_CHAIR.ino
Arduino/WHEEL_CHAIR_SERIAL/: WHEEL_CHAIR_SERIAL.ino
config/location/: location.yaml
config/maps/: dolbang_map.pgm  dolbang_map.yaml  gongA_map.pgm  hanyang_1.pgm  hanyang_1.yaml
install/: local_setup.sh  setup.sh
install/llm_ros/lib/llm_ros/: filter_input_text
install/llm_ros/share/llm_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/voice2text/lib/voice2text/: voice2text
install/voice2text/share/voice2text/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/2D_LiDAR/rf2o_laser_odometry/: CMakeLists.txt
src/2D_LiDAR/sllidar_ros2/rviz/: sllidar_ros2.rviz
src/2D_LiDAR/wheelchair_slam_bringup/: package.xml
src/2D_LiDAR/wheelchair_slam_bringup/config/: amcl.yaml  ekf_odom.yaml  nav2_params_full.yaml  nav2_params_full.yaml.txt  nav2_params_planner.yaml
src/2D_LiDAR/wheelchair_slam_bringup/launch/: nav2_full.launch.py  nav2_planner_only.launch.py  offline_mapping.launch.py  rs_camera.launch.py  sensors_bringup.launch.py
src/2D_LiDAR/wheelchair_slam_bringup/urdf/: rplidar_myahrs.urdf
src/IMU/imu_preprocess/: CMakeLists.txt  explaination.md  package.xml
src/IMU/imu_preprocess/config/: imu_bias.yaml
src/IMU/imu_preprocess/launch/: imu_preprocess.launch.py
src/IMU/imu_preprocess/scripts/: fft_lpf_estimator.py
src/IMU/imu_preprocess/src/: imu_preprocess_node.cpp
src/llm_control/: package.xml  setup.cfg  setup.py
src/llm_control/config/: wheelchair_params.yaml
src/llm_control/launch/: llm_control_launch.py  llm_motor_launch.py
src/llm_control/llm_control/: llm_control.py  llm_motor.py
src/llm_ros/: package.xml  setup.cfg  setup.py
src/llm_ros/llm_ros/: intent_router.py  llm_node.py  location_command.py  wake_word_detector.py  wake_word_detector_filter.py
src/md_motor_driver_ros2/: README.md
src/md_motor_driver_ros2/md_controller/: CMakeLists.txt  package.xml
src/motor_bridge/: package.xml  setup.cfg  setup.py
src/motor_bridge/motor_bridge/: motor_bridge_node.py
src/motor_driver/: CMakeLists.txt  package.xml
src/motor_driver/config/: vel_converter_params.yaml
src/motor_driver/launch/: motor_driver_launch.py
src/motor_driver/src/: vel_converter_node.cpp
src/mppi/: mppi파라미터  런치파일수정용
src/nav2_wheel/: CMakeLists.txt  package.xml
src/nav2_wheel/launch/: bringup.launch.py  localization.launch.py  navigation.launch.py  rviz.launch.py  sim.launch.py  sim_test.launch.py  slam.launch.py  spawn_wheelchair.launch.py  wheelchair.launch.py  wheelchair_simulation.launch.py  wheelchair_test.launch.py
src/nav2_wheel/maps/: GongHall_map.pgm  GongHall_map.yaml  gongA.pgm  gongA.yaml  gongA_map.yaml
src/nav2_wheel/params/: ekf.yaml  nav2_params.yaml
src/nav2_wheel/rviz/: config.rviz
src/nav2_wheel/urdf/: depth.xacro  gazebo.xacro  imu.xacro  lidar.xacro  macros.xacro  model.config  model.xacro  model_gazebo.xacro  params.yaml
src/nav2_wheel/worlds/: gongA.model
src/path_planner/: package.xml  setup.py
src/path_planner/launch/: local_planning_pipeline.launch.py
src/path_planner/path_planner/: local_avoid_planner.py  make_pathnplan.py  make_pathnplan.py.txt  nav2_navigate_to_pose.py.txt  nav2_pathnplan.py  path_follower.py
src/voice2text/: package.xml  setup.cfg  setup.py
src/voice2text/voice2text/: voice2text.py
src/wheelchair_slam_bringup/: CMakeLists.txt
src/wheelchair_slam_bringup/config/: ekf_odom.yaml  slam.yaml
(+14 files in other folders)
