<?xml version="1.0"?>
<package format="3">
  <name>wheelchair_slam_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package for 2D LiDAR + IMU offline SLAM using slam_toolbox.</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch runtime -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Nodes used by launch -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>

  <!-- Messages/TF present in system -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
